@@ -1,5 +1,5 @@
 
-R version 2.13.1 Patched (2011-07-20 r56456)
+R Under development (unstable) (2011-08-09 r56685)
 Copyright (C) 2011 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 Platform: x86_64-unknown-linux-gnu (64-bit)
@@ -177,7 +177,7 @@ c(3217, 205887, 3294199, 105414357, 3373259426, 107944301636,
 > 
 > 
 > cat('Time elapsed: ', proc.time(),'\n') # "stats"
-Time elapsed:  1.322 0.047 1.426 0 0 
+Time elapsed:  1.098 0.064 1.226 0.001 0.007 
 > 
 > if(!interactive()) warnings()
 NULL
